--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" href="#">WEB322 - Kyeongsoo Lee</span>
+          <span class="navbar-brand" href="#">Employee Management Platform</span>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
